Geometry Nodes crashes blender when a Collection Info node is connected to a Separate Geometry nodes set to Instance #94659

Closed
opened 2022-01-05 11:36:27 +01:00 by Godwin Jimoh · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.09

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-03 07:10, hash: ea8d749587
Worked: (newest version of Blender that worked as expected)

Short description of error
seperate geo bug.png
The above setup causes blender to crash with an "EXCEPTION_ACCESS_VIOLATION" error in the console
Things to note for the crash to happen:

  • Either an Index or an ID field (or their derivative) must be connected to the Selection input of the Separate Geometry node.
  • The Separate Geometry domain must be set to Instance
  • The Collection Info collection must have two or more objects in it.
  • The Separate Children input of the Collection Info node must be toggled off
  • I can't seem to reproduce the crash with the Delete Geometryx Node for some reason

Exact steps for others to reproduce the error
seperate geo bug.blend

  1. Download the above blend file or recreate it from image above.
  2. Deactivate the Separate Children input of the Collection Info node
  3. Crash happens!
  4. If blender does not crash immediately then activate and deactivate the Separate Children input a couple of times
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.09 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-03 07:10, hash: `ea8d749587` Worked: (newest version of Blender that worked as expected) **Short description of error** ![seperate geo bug.png](https://archive.blender.org/developer/F12789798/seperate_geo_bug.png) The above setup causes blender to crash with an "**EXCEPTION_ACCESS_VIOLATION**" error in the console Things to note for the crash to happen: - Either an **Index** or an **ID** field (or their derivative) must be connected to the **Selection** input of the **Separate Geometry** node. - The **Separate Geometry** domain must be set to **Instance** - The **Collection Info** collection must have two or more objects in it. - The **Separate Children** input of the **Collection Info** node must be toggled off - I can't seem to reproduce the crash with the **Delete Geometry**x Node for some reason **Exact steps for others to reproduce the error** [seperate geo bug.blend](https://archive.blender.org/developer/F12789812/seperate_geo_bug.blend) 1. Download the above blend file or recreate it from image above. 2. Deactivate the **Separate Children** input of the **Collection Info** node 3. Crash happens! 4. If blender does not crash immediately then activate and deactivate the **Separate Children** input a couple of times
Author

Added subscriber: @Astronet-4

Added subscriber: @Astronet-4
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 3e92b4ed24

This issue was referenced by 3e92b4ed2408eacd126c0deb7790891025b2c075
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-01-05 16:55:36 +01:00

This issue was referenced by 29e33cfff5

This issue was referenced by 29e33cfff5b6e9d2e83ae5fdb2372163fe251817
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94659
No description provided.